--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   <!-- Product Grid -->
   <div class="product-list">
     <div class="product">
-      <img src="product1.jpg" alt="Product 1">
-      <div class="product-name">Product 1</div>
+      <img src="Havells 500 mm padestal fan windstorm.jpg" alt="Havells Windstorm 500mm Padestal Fan">
+      <div class="product-name">Havells Windstorm 500mm Pedestal Fan</div>
     </div>
     <div class="product">
       <img src="product2.jpg" alt="Product 2">
