--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       <div class="product-name">Havells Windstorm 500mm Pedestal Fan</div>
     </div>
     <div class="product">
-      <img src="product2.jpg" alt="Product 2">
-      <div class="product-name">Product 2</div>
+      <img src="Havells windstorm 400 mm padestal fan.jpg" alt="Havells windstorm 400 mm padestal fan">
+      <div class="product-name">Havells windstorm 400 mm padestal fan</div>
     </div>
     <!-- Add more products here -->
   </div>
