--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
       <img src="Havells windstorm 400 mm padestal fan.jpg" alt="Havells windstorm 400 mm padestal fan">
       <div class="product-name">Havells windstorm 400 mm padestal fan</div>
     </div>
-    <!-- Add more products here -->
+  <div class="product">
+      <img src="Havells Effiencia neo.jpg" alt="Havells Efficiencia Neo">
+      <div class="product-name">Havells Efficiencia Neo</div>
+    </div>
+
   </div>
 
 </body>
