--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
       <img src="Havells Effiencia neo.jpg" alt="Havells Efficiencia Neo">
       <div class="product-name">Havells Efficiencia Neo</div>
     </div>
-
-  </div>
+  <div class="product">
+      <img src="Havells Festiva 1200 mm.jpg" alt="Havells Festiva 1200mm">
+      <div class="product-name">Havells Festiva (1200 mm)</div>
+    </div>
+  
 
 </body>
 </html>
