--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
       <img src="Havells Festiva 1200 mm.jpg" alt="Havells Festiva 1200mm">
       <div class="product-name">Havells Festiva (1200 mm)</div>
     </div>
-  
+   <div class="product">
+    <img src="Havells Fusion Prime.jpg" alt="Havells Fusion Prime">
+    <div class="product-name">Havells Fusion Prime</div>
+  </div>
 
 </body>
 </html>
