--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
     <img src="Havells Fusion Prime.jpg" alt="Havells Fusion Prime">
     <div class="product-name">Havells Fusion Prime</div>
   </div>
-
+   <div class="product">
+    <img src="Havells Quick air 1200 mm.jpg" alt="Havells Quick Air 1200mm">
+    <div class="product-name">Havells Quick Air (1200 mm)</div>
+  </div>
 </body>
 </html>
