--- a/index.html
+++ b/index.html
@@ -117,5 +117,9 @@
     <img src="Havells Quick air 1200 mm.jpg" alt="Havells Quick Air 1200mm">
     <div class="product-name">Havells Quick Air (1200 mm)</div>
   </div>
+   <div class="product">
+    <img src="Havells Samrat.jpg" alt="Havells Samrat">
+    <div class="product-name">Havells Samrat</div>
+  </div>
 </body>
 </html>
