--- a/index.html
+++ b/index.html
@@ -121,5 +121,16 @@
     <img src="Havells Samrat.jpg" alt="Havells Samrat">
     <div class="product-name">Havells Samrat</div>
   </div>
+    <div class="product">
+    <img src="Havells ss 390.jpg" alt="Havells SS 390">
+    <div class="product-name">Havells SS 390</div>
+  </div>
+
+  <!-- Product 9 -->
+  <div class="product">
+    <img src="Havells Thrill Air.jpg" alt="Havells Thrill Air">
+    <div class="product-name">Havells Thrill Air</div>
+  </div>
+
 </body>
 </html>
