--- a/index.html
+++ b/index.html
@@ -131,6 +131,27 @@
     <img src="Havells Thrill Air.jpg" alt="Havells Thrill Air">
     <div class="product-name">Havells Thrill Air</div>
   </div>
+  <div class="product">
+    <img src="Havells Ventill Air Dx.jpg" alt="Havells Ventil Air DX Exhaust Fan">
+    <div class="product-name">Havells Ventil Air DX (Exhaust Fan)</div>
+  </div>
 
+  <!-- Product 11 -->
+  <div class="product">
+    <img src="Havells Water Heater.jpg" alt="Havells Water Heater 3L">
+    <div class="product-name">Havells Water Heater (3L)</div>
+  </div>
+
+  <!-- Product 12 -->
+  <div class="product">
+    <img src="Tisva led Light 2.jpg" alt="Tisva Inverter LED Bulb">
+    <div class="product-name">Tisva LED Bulb (Inverter Lamp)</div>
+  </div>
+
+  <!-- Product 13 -->
+  <div class="product">
+    <img src="Tisva LEd light.jpg" alt="Tisva LED Batten Light">
+    <div class="product-name">Tisva LED Batten Light</div>
+  </div>
 </body>
 </html>
