--- a/index.html
+++ b/index.html
@@ -153,5 +153,10 @@
     <img src="Tisva LEd light.jpg" alt="Tisva LED Batten Light">
     <div class="product-name">Tisva LED Batten Light</div>
   </div>
+   <div class="product">
+    <img src="Usha Crisp Air vx.jpg" alt="Usha Crisp Air VX Exhaust Fan">
+    <div class="product-name">Usha Crisp Air VX (Exhaust Fan)</div>
+  </div>
+
 </body>
 </html>
