--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
     <img src="Usha Crisp Air vx.jpg" alt="Usha Crisp Air VX Exhaust Fan">
     <div class="product-name">Usha Crisp Air VX (Exhaust Fan)</div>
   </div>
-
+  <div class="product">
+    <img src="Usha racer (1).jpg" alt="Usha Racer">
+    <div class="product-name">Usha Racer</div>
+  </div>
 </body>
 </html>
