--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   <!-- Scrolling Heading -->
   <div class="scroll-heading">
-    <span>Updated Product List • Updated Product List • Updated Product List</span>
+    <span>•Updated Product List • We Assure Low Prices • Delivery Available •</span>
   </div>
 
   <!-- Product Grid -->
