--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <!-- Logo Section -->
   <div class="logo">
     <img src="Logo (1).jpg" alt="Company Logo">
+    <img src="Logo 2.jpg" alt="Company Logo">
   </div>
 
   <!-- Scrolling Heading -->
