--- a/index.html
+++ b/index.html
@@ -164,3 +164,40 @@
   </div>
 </body>
 </html>
+<section id="order-guide" style="padding: 40px; background: #f9f9f9;">
+  <h2 style="text-align: center; font-size: 32px; color: #333; margin-bottom: 40px;">
+    🛒 How to Place Your Order
+  </h2>
+
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+    <div style="background: white; width: 200px; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); position: relative;">
+      <div style="background: #007BFF; color: white; font-weight: bold; width: 30px; height: 30px; line-height: 30px; border-radius: 50%; margin: 0 auto 10px;">1</div>
+      <h3 style="text-align: center;">Select Product</h3>
+      <p style="font-size: 14px; color: #555; text-align: center;">Browse and pick your item.</p>
+    </div>
+
+    <div style="background: white; width: 200px; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); position: relative;">
+      <div style="background: #007BFF; color: white; font-weight: bold; width: 30px; height: 30px; line-height: 30px; border-radius: 50%; margin: 0 auto 10px;">2</div>
+      <h3 style="text-align: center;">Contact Us</h3>
+      <p style="font-size: 14px; color: #555; text-align: center;">WhatsApp, call, or email us.</p>
+    </div>
+
+    <div style="background: white; width: 200px; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); position: relative;">
+      <div style="background: #007BFF; color: white; font-weight: bold; width: 30px; height: 30px; line-height: 30px; border-radius: 50%; margin: 0 auto 10px;">3</div>
+      <h3 style="text-align: center;">Confirm Order</h3>
+      <p style="font-size: 14px; color: #555; text-align: center;">Send address & payment info.</p>
+    </div>
+
+    <div style="background: white; width: 200px; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); position: relative;">
+      <div style="background: #007BFF; color: white; font-weight: bold; width: 30px; height: 30px; line-height: 30px; border-radius: 50%; margin: 0 auto 10px;">4</div>
+      <h3 style="text-align: center;">Dispatch</h3>
+      <p style="font-size: 14px; color: #555; text-align: center;">We ship your order quickly.</p>
+    </div>
+
+    <div style="background: white; width: 200px; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); position: relative;">
+      <div style="background: #007BFF; color: white; font-weight: bold; width: 30px; height: 30px; line-height: 30px; border-radius: 50%; margin: 0 auto 10px;">5</div>
+      <h3 style="text-align: center;">Delivery</h3>
+      <p style="font-size: 14px; color: #555; text-align: center;">Item reaches your doorstep.</p>
+    </div>
+  </div>
+</section>
