--- a/index.html
+++ b/index.html
@@ -201,3 +201,24 @@
     </div>
   </div>
 </section>
+<section id="contact-section" style="padding: 40px; background-color: #eef2f7;">
+  <h2 style="text-align: center; font-size: 28px; margin-bottom: 30px;">📬 Send Us a Query</h2>
+
+  <div style="max-width: 600px; margin: 0 auto; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+    <label for="query" style="font-size: 16px; font-weight: bold;">Your Query:</label>
+    <textarea id="query" rows="5" placeholder="Write your question here..." style="width: 100%; padding: 10px; margin-top: 10px; border: 1px solid #ccc; border-radius: 6px; font-size: 14px;"></textarea>
+
+    <div style="text-align: center; margin-top: 20px;">
+      <a href="mailto:alokmistri69@gmail.com" style="text-decoration: none;">
+        <button style="background-color: #007BFF; color: white; border: none; padding: 12px 24px; border-radius: 8px; font-size: 16px; cursor: pointer;">
+          📧 Contact Us
+        </button>
+      </a>
+    </div>
+
+    <div style="margin-top: 30px; font-size: 15px; color: #333; text-align: center;">
+      <p><strong>Email:</strong> alokmistri69@gmail.com</p>
+      <p><strong>WhatsApp No:</strong> 7439034248</p>
+    </div>
+  </div>
+</section>
