--- a/index.html
+++ b/index.html
@@ -162,6 +162,27 @@
     <img src="Usha racer (1).jpg" alt="Usha Racer">
     <div class="product-name">Usha Racer</div>
   </div>
+   <div class="product">
+    <img src="HAVELLS 300 MM SWING WALL HS FAN OFF WHITE 3 Blade Wall Fan (Off White, Pack of 1) 300 mm 3 Blade Wall Fan.jpg" alt="Havells 300MM Swing Wall HS Fan" width="200px">
+    <h3>HAVELLS 300 MM SWING WALL HS FAN</h3>
+</div>
+   <div class="product">
+    <img src="HAVELLS ACCELERO 400 mm 3 Blade Wall Fan.jpg" alt="Havells Accelero 400mm Wall Fan" width="200px">
+    <h3>Havells Accelero 400mm Wall Fan</h3>
+</div>
+   <div class="product">
+    <img src="Havells 230MM BRIDIE Personal Yellow Fan.jpg" alt="Havells 230MM BRIDIE Personal Yellow Fan" width="200px">
+    <h3>HAVELLS 230MM BRIDIE PERSONAL FAN</h3>
+</div>
+   <div class="product">
+    <img src="HAVELLS Swing LX High Speed 400 mm 3 Blade Table Fan.jpg" alt="HAVELLS Swing LX High Speed 400 mm 3 Blade Table Fan" width="200px">
+    <h3>HAVELLS Swing LX High Speed Fan</h3>
+</div>
+  <div class="product">
+    <img src="HAVELLS Sprint-16 HS 400mm Pedestal Fan (White) 400 mm 3 Blade Pedestal Fan.jpg" alt="HAVELLS Sprint-16 HS 400mm Pedestal Fan (White)" width="200px">
+    <h3>HAVELLS Sprint-16 HS Pedestal Fan</h3>
+</div>
+
 </body>
 </html>
 <section id="order-guide" style="padding: 40px; background: #f9f9f9;">
