--- a/index.html
+++ b/index.html
@@ -96,51 +96,62 @@
   <div class="product-list">
     <div class="product">
       <img src="Havells 500 mm padestal fan windstorm.jpg" alt="Havells Windstorm 500mm Padestal Fan">
-      <div class="product-name">Havells Windstorm 500mm Pedestal Fan</div>
+      <div class="product-name">HAVELLS Wind Storm 500 mm 3 Blade Pedestal Fan</div>
+       <div class="product-price" style="color: green; font-weight: bold;">₹3300</div>
     </div>
     <div class="product">
       <img src="Havells windstorm 400 mm padestal fan.jpg" alt="Havells windstorm 400 mm padestal fan">
-      <div class="product-name">Havells windstorm 400 mm padestal fan</div>
+      <div class="product-name">HAVELLS Wind Storm 400 mm 3 Blade Pedestal Fan</div>
+      <div class="product-price" style="color: green; font-weight: bold;">₹3000</div>
     </div>
   <div class="product">
       <img src="Havells Effiencia neo.jpg" alt="Havells Efficiencia Neo">
-      <div class="product-name">Havells Efficiencia Neo</div>
+      <div class="product-name">Havells Efficiencia DX </div>
+       <div class="product-price" style="color: green; font-weight: bold;">₹2600</div>
     </div>
   <div class="product">
       <img src="Havells Festiva 1200 mm.jpg" alt="Havells Festiva 1200mm">
-      <div class="product-name">Havells Festiva (1200 mm)</div>
+      <div class="product-name">HAVELLS Festiva 1200 mm 3 Blade Ceiling Fan</div>
+       <div class="product-price" style="color: green; font-weight: bold;">₹3100</div>
     </div>
    <div class="product">
     <img src="Havells Fusion Prime.jpg" alt="Havells Fusion Prime">
     <div class="product-name">Havells Fusion Prime</div>
+     <div class="product-price" style="color: green; font-weight: bold;">₹3100</div>
   </div>
    <div class="product">
     <img src="Havells Quick air 1200 mm.jpg" alt="Havells Quick Air 1200mm">
     <div class="product-name">Havells Quick Air (1200 mm)</div>
+    <div class="product-price" style="color: green; font-weight: bold;">₹2450</div>
   </div>
    <div class="product">
     <img src="Havells Samrat.jpg" alt="Havells Samrat">
-    <div class="product-name">Havells Samrat</div>
+    <div class="product-name">HAVELLS Samraat ES 1 Star 900 mm 3 Blade Ceiling Fan</div>
+     <div class="product-price" style="color: green; font-weight: bold;">₹2100</div>
   </div>
     <div class="product">
     <img src="Havells ss 390.jpg" alt="Havells SS 390">
-    <div class="product-name">Havells SS 390</div>
+    <div class="product-name">HAVELLS SS 390 ES 1200 mm 3 Blade Ceiling Fan</div>
+    <div class="product-price" style="color: green; font-weight: bold;">₹2350</div>
   </div>
 
   <!-- Product 9 -->
   <div class="product">
     <img src="Havells Thrill Air.jpg" alt="Havells Thrill Air">
-    <div class="product-name">Havells Thrill Air</div>
+    <div class="product-name">HAVELLS Thrill Air ES 1200 mm 3 Blade Ceiling Fan</div>
+     <div class="product-price" style="color: green; font-weight: bold;">₹1999</div>
   </div>
   <div class="product">
     <img src="Havells Ventill Air Dx.jpg" alt="Havells Ventil Air DX Exhaust Fan">
-    <div class="product-name">Havells Ventil Air DX (Exhaust Fan)</div>
+    <div class="product-name">230mm FAN VENTIL AIR DSP CHOCO BROWN </div>
+     <div class="product-price" style="color: green; font-weight: bold;">₹1300</div>
   </div>
 
   <!-- Product 11 -->
   <div class="product">
     <img src="Havells Water Heater.jpg" alt="Havells Water Heater 3L">
-    <div class="product-name">Havells Water Heater (3L)</div>
+    <div class="product-name">Havells(3L)Instanio W/H</div>
+     <div class="product-price" style="color: green; font-weight: bold;">₹3550</div>
   </div>
 
   <!-- Product 12 -->
@@ -160,27 +171,33 @@
   </div>
   <div class="product">
     <img src="Usha racer (1).jpg" alt="Usha Racer">
-    <div class="product-name">Usha Racer</div>
+    <div class="product-name">USHA Racer Chrome 1200 mm 3 Blade Ceiling Fan</div>
+     <div class="product-price" style="color: green; font-weight: bold;">₹1950</div>
   </div>
    <div class="product">
     <img src="HAVELLS 300 MM SWING WALL HS FAN OFF WHITE 3 Blade Wall Fan (Off White, Pack of 1) 300 mm 3 Blade Wall Fan.jpg" alt="Havells 300MM Swing Wall HS Fan" width="200px">
     <h3>HAVELLS 300 MM SWING WALL HS FAN</h3>
+     <div class="product-price" style="color: green; font-weight: bold;">₹2400</div>
 </div>
    <div class="product">
     <img src="HAVELLS ACCELERO 400 mm 3 Blade Wall Fan.jpg" alt="Havells Accelero 400mm Wall Fan" width="200px">
     <h3>Havells Accelero 400mm Wall Fan</h3>
+     <div class="product-price" style="color: green; font-weight: bold;">₹2,499</div>
 </div>
    <div class="product">
     <img src="Havells 230MM BRIDIE Personal Yellow Fan.jpg" alt="Havells 230MM BRIDIE Personal Yellow Fan" width="200px">
     <h3>HAVELLS 230MM BRIDIE PERSONAL FAN</h3>
+     <div class="product-price" style="color: green; font-weight: bold;">₹1599</div>
 </div>
    <div class="product">
     <img src="HAVELLS Swing LX High Speed 400 mm 3 Blade Table Fan.jpg" alt="HAVELLS Swing LX High Speed 400 mm 3 Blade Table Fan" width="200px">
     <h3>HAVELLS Swing LX High Speed Fan</h3>
+    <div class="product-price" style="color: green; font-weight: bold;">₹2,300</div>
 </div>
   <div class="product">
     <img src="HAVELLS Sprint-16 HS 400mm Pedestal Fan (White) 400 mm 3 Blade Pedestal Fan.jpg" alt="HAVELLS Sprint-16 HS 400mm Pedestal Fan (White)" width="200px">
     <h3>HAVELLS Sprint-16 HS Pedestal Fan</h3>
+     <div class="product-price" style="color: green; font-weight: bold;">₹3400</div>
 </div>
 
 </body>
