--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <!-- Scrolling Heading -->
   <div class="scroll-heading">
-    <span>•Updated Product List • We Assure You To The Best Quality at The Low Prices • Delivery Available •</span>
+    <span>•Updated Product List • We Assure You To The Best Quality at The Low Prices • Delivery Available • Those Products Rate Are Without Delivery Charges•</span>
   </div>
 
   <!-- Product Grid -->
