--- a/index.html
+++ b/index.html
@@ -384,42 +384,7 @@
     });
   }
 </script>
-<div style="position: fixed; right: 20px; bottom: 100px; width: 200px; background: #fff; border: 1px solid #ccc; box-shadow: 0 0 10px rgba(0,0,0,0.1); border-radius: 8px; padding: 10px; z-index: 1000;">
-  <h3 style="font-size: 16px; color: #007BFF; text-align: center; margin-bottom: 10px;">Sponsored</h3>
-  <a href="https://your-ad-link.com" target="_blank" style="text-decoration: none;">
-    <img src="your-ad-image.jpg" alt="Ad Banner" style="width: 100%; border-radius: 6px;">
-    <p style="font-size: 14px; color: #333; text-align: center; margin-top: 8px;">Buy Best Fans Now!</p>
-  </a>
+<div style="position: fixed; top: 100px; right: 20px; width: 300px; background: white; border: 2px solid #ccc; border-radius: 10px; padding: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3); z-index: 9999;">
+    <img src="Photo.jpg" alt=" Wish You A Happy Married Life" style="width: 100%; height: auto; border-radius: 8px;">
+    <h2 style="text-align: center; color: #333; margin-top: 10px;"> Wish You A Happy Married Life 💍</h2>
 </div>
-<div style="position: fixed; right: 20px; bottom: 100px; width: 220px; background: #fff; border: 1px solid #ccc; box-shadow: 0 0 10px rgba(0,0,0,0.1); border-radius: 8px; padding: 10px; z-index: 1000;">
-  <h3 style="font-size: 16px; color: #E60012; text-align: center; margin-bottom: 10px;">Sponsored</h3>
-  <a href="https://your-affiliate-link.com" target="_blank" style="text-decoration: none;">
-    <img src="/path/to/Havells%20Quick%20air%201200%20mm.jpg" alt="Havells Fan Ad" style="width: 100%; border-radius: 6px;">
-    <p style="font-size: 14px; color: #333; text-align: center; margin-top: 8px;">Discover Premium Ceiling Fans!</p>
-  </a>
-</div>
-<div style="position: fixed; right: 20px; bottom: 100px; width: 240px; background: #fff; border: 1px solid #ccc; box-shadow: 0 0 10px rgba(0,0,0,0.1); border-radius: 8px; padding: 10px; z-index: 1000;">
-  <!-- Banner Section -->
-  <div style="background: linear-gradient(45deg, #E60012, #ff6f61); color: white; text-align: center; padding: 8px 5px; border-radius: 6px; margin-bottom: 10px;">
-    <h2 style="font-size: 18px; margin: 0;">Special Offer!</h2>
-  </div>
-
-  <!-- Ad Image and Link -->
-  <a href="https://your-affiliate-link.com" target="_blank" style="text-decoration: none;">
-    <img src="/path/to/Havells%20Quick%20air%201200%20mm.jpg" alt="Havells Fan Ad" style="width: 100%; border-radius: 6px;">
-    <p style="font-size: 14px; color: #333; text-align: center; margin-top: 8px;">Discover Premium Ceiling Fans!</p>
-  </a>
-</div>
-<div style="position: fixed; right: 20px; bottom: 100px; width: 260px; background: #fff; border: 1px solid #ccc; box-shadow: 0 0 10px rgba(0,0,0,0.1); border-radius: 10px; padding: 10px; z-index: 1000;">
-  <!-- Banner -->
-  <div style="background: linear-gradient(45deg, #ff5f6d, #ffc371); color: white; text-align: center; padding: 8px; border-radius: 8px; margin-bottom: 10px;">
-    <h2 style="font-size: 18px; margin: 0;">Happy Married Life!</h2>
-  </div>
-
-  <!-- Photo -->
-  <img src="/path/to/Couple.jpg" alt="Happy Couple" style="width: 100%; border-radius: 8px; margin-bottom: 8px;">
-  
-  <!-- Text (optional) -->
-  <p style="font-size: 14px; text-align: center; color: #444;">Wishing you a lifetime of love and happiness!</p>
-</div>
-
