--- a/index.html
+++ b/index.html
@@ -385,6 +385,11 @@
   }
 </script>
 <div style="position: fixed; top: 100px; right: 20px; width: 300px; background: white; border: 2px solid #ccc; border-radius: 10px; padding: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3); z-index: 9999;">
-    <img src="Photo.jpg" alt=" Wish You A Happy Married Life" style="width: 100%; height: auto; border-radius: 8px;">
-    <h2 style="text-align: center; color: #333; margin-top: 10px;"> Wish You A Happy Married Life 💍</h2>
+    <img src="Photo.jpg" alt="wish You a happy Married Life" style="width: 100%; height: auto; border-radius: 8px;">
+    <h2 style="text-align: center; color: #333; margin-top: 10px;"> Wish You A Happy Married Life💍 (For Showing Your Ads Contact With us)</h2>
 </div>
+<div style="position: fixed; top: 100px; right: 20px; width: 300px; background: white; border: 2px solid #ccc; border-radius: 10px; padding: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3); z-index: 9999;">
+    <div style="background: #ffcc00; color: black; text-align: center; padding: 5px; font-weight: bold; border-radius: 8px 8px 0 0; font-size: 8px;">
+        AD
+   
+
